Updated formatting, resoved context switching issues related to issue with Process Builder, resolved issue #8, resolved issue with shell being repeatedly closed.